5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1764_1185.log
== TEST (2019-05-30 13:44:38) 
-- CODE:
from numpy import *

glicose = array(eval(input('digite um valor: ')))

cont1 = 0
cont2 = 0
 
while(cont1<size(glicose)):
	if(glicose[cont1] > 99):
		cont2=cont2+1
		print(cont1)
	   cont1=cont1+1
		print(cont2)

-- ERROR:
File "XXXX", line 12
    cont1=cont1+1
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:44:51) 
-- CODE:
from numpy import *

glicose = array(eval(input('digite um valor: ')))

cont1 = 0
cont2 = 0
 
while(cont1<size(glicose)):
	if(glicose[cont1] > 99):
		cont2=cont2+1
		print(cont1)
cont1=cont1+1
		print(cont2)

-- ERROR:
File "XXXX", line 13
    print(cont2)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:44:59) 
-- CODE:
from numpy import *

glicose = array(eval(input('digite um valor: ')))

cont1 = 0
cont2 = 0
 
while(cont1<size(glicose)):
	if(glicose[cont1] > 99):
		cont2=cont2+1
		print(cont1)
cont1=cont1+1
	print(cont2)

-- ERROR:
File "XXXX", line 13
    print(cont2)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:45:01) 
-- CODE:
from numpy import *

glicose = array(eval(input('digite um valor: ')))

cont1 = 0
cont2 = 0
 
while(cont1<size(glicose)):
	if(glicose[cont1] > 99):
		cont2=cont2+1
		print(cont1)
cont1=cont1+1
	print(cont2)

-- ERROR:
File "XXXX", line 13
    print(cont2)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:45:06) 
-- CODE:
from numpy import *

glicose = array(eval(input('digite um valor: ')))

cont1 = 0
cont2 = 0
 
while(cont1<size(glicose)):
	if(glicose[cont1] > 99):
		cont2=cont2+1
		print(cont1)
cont1=cont1+1
print(cont2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:45:46) 
-- CODE:
from numpy import *

glicose = array(eval(input('digite um valor: ')))

cont1 = 0
cont2 = 0
 
while(cont1<size(glicose)):
	if(glicose[cont1] > 99):
		cont2=cont2+1
		print(cont1)
cont1=cont1+1
print(cont2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:46:17) 
-- CODE:
from numpy import *

glicose = array(eval(input('digite um valor: ')))

cont1 = 0
cont2 = 0
 
while(cont1<size(glicose)):
	if(glicose[cont1] > 99):
	cont2=cont2+1
	print(cont1)
cont1=cont1+1
print(cont2)

-- ERROR:
File "XXXX", line 10
    cont2=cont2+1
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 13:52:02) 
-- CODE:
from numpy import *

glicose = array(eval(input('digite um valor: ')))

cont1 = 0
cont2 = 0
 
while(cont1<size(glicose)):
	if(glicose[cont1] > 99):
		cont2=cont2+1
		print(cont1)
cont1=cont1+1
print(cont2)

-- EXECUTION TIME:
391.811
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:39:43) 
-- CODE:
from numpy import*
NG = array(eval(input())
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:39:53) 
-- CODE:
from numpy import*
NG = array(eval(input("
							 "))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.307533
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 2
    NG = array(eval(input("
                          ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:39:54) 
-- CODE:
from numpy import*
NG = array(eval(input("
							 "))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
File "XXXX", line 2
    NG = array(eval(input("
                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:39:59) 
-- CODE:
from numpy import*
NG = array(eval(input(''))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.235176
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 3
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:40:13) 
-- CODE:
from numpy import*
NG = array(eval(input('digite um numero:'))
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:40:30) 
-- CODE:
from numpy import*
NG = array(eval(input('digite um numero:')
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:40:45) 
-- CODE:
from numpy import*
NG = array(eval(input('digite um numero:')
i= 0
n= 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
File "XXXX", line 3
    i= 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:42:25) 
-- CODE:
from numpy import*

gl = array(eval(input('indice glicemico:'))
i= 0
n= 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
File "XXXX", line 4
    i= 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:43:05) 
-- CODE:
from numpy import*

gl = array(eval(input('indice glicemico:'))
I = 0
n= 0
while(i < size(gl)):
	if(lg[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
File "XXXX", line 4
    I = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:43:14) 
-- CODE:
from numpy import*

gl = array(eval(input('indice glicemico:'))
i= 0
n= 0
while(i < size(gl)):
	if(lg[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
File "XXXX", line 4
    i= 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:44:05) 
-- CODE:
from numpy import*

gl = array(eval(input('indice glicemico:'))

i= 0
n= 0
	  
while(i < size(gl)):
	if(lg[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
File "XXXX", line 5
    i= 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:54:17) 
-- CODE:
from numpy import*
v=array(eval(input("")))

i1=0
i2=0

while(i1<size(v)):
    if(v[i1]>99):
        i2=i2+1
        print(i1)
    i1=i1+1
print(i2)
-- EXECUTION TIME:
0.437486
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
